--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,22 @@
   <meta name="author" content="">
 
   <title>Hiral Soni</title>
-  <link rel="icon" type="image/x-icon" href="../img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="img/favicon.png">
 
   <!-- Bootstrap core CSS -->
-  <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
     rel="stylesheet">
-  <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="../vendor/devicons/css/devicons.min.css" rel="stylesheet">
-  <link href="../vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+  <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
+  <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="../css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.min.css" rel="stylesheet">
 
 </head>
 
@@ -34,7 +34,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Start Bootstrap</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="../img/Hiral_Soni_LinkedIn.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Hiral_Soni_LinkedIn.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -62,7 +62,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../Hiral_Soni_Resume.pdf" download="Hiral_Soni_Resume">Download the
+          <a class="nav-link" href="Hiral_Soni_Resume.pdf" download="Hiral_Soni_Resume">Download the
             Resume</a>
         </li>
       </ul>
