--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Start Bootstrap</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Hiral_Soni_LinkedIn.png" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Hiral_Soni.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -76,7 +76,7 @@
         <h1 class="mb-0">Hiral
           <span class="text-primary">Soni</span>
         </h1>
-        <div class="subheading mb-5">Toronto, ON, Canada · (680) 946-7197 ·
+        <div class="subheading mb-5">Toronto, ON, Canada · (647) 866-7197 ·
           <a href="mailto:ihiralsoni@gmail.com">ihiralsoni@gmail.com</a>
         </div>
         <p class="mb-5">I'm a passionate and results-driven Full Stack Developer. I specialize in crafting elegant and
@@ -110,15 +110,25 @@
       <div class="my-auto">
         <h2 class="mb-5">Experience</h2>
 
+        <!-- One community -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Full Stack Developer</h3>
+            <div class="subheading mb-3">One Community Global</div>
+            <p>Technologies – React.js, Redux, TypeScript, CSS
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2024 - July 2024</span>
+          </div>
+        </div>
+
+        <!-- Fiatmatch -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Software Developer</h3>
-            <div class="subheading mb-3">Fiatmatch (Internship)</div>
-            <p>As part of my final year capstone project at Humber College, I joined an agile internship for
-              "FiatMatch." I led the development of 10+ key features in a B2B dashboard using React.js, Next.js,
-              TypeScript, Redux, and Tailwind CSS. This improved user experiences and system performance. I also
-              actively contributed to optimizing project workflows through regular meetings and gained hands-on
-              experience with modern full-stack web development technologies and tools.
+            <div class="subheading mb-3">Fiatmatch</div>
+            <p>Technologies – React.js, Next.js, TypeScript, Redux, Tailwind CSS, Material UI
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -126,29 +136,36 @@
           </div>
         </div>
 
+        <!-- Infinity Brains -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Laravel Developer</h3>
             <div class="subheading mb-3">Infinity Brains</div>
-            <p>During my tenure at Infinity Brains, I excelled in Laravel and JavaScript for web apps and dynamic UIs,
-              with proficiency in Postman for API testing. I efficiently managed tasks and bugs with Jira, optimized
-              databases, and used GitHub for version control. I oversaw multiple projects, conducted thorough security
-              testing, and demonstrated strong problem-solving and mentorship skills while ensuring data integrity and
-              compliance with industry standards.</p>
+            <p>Technologies – Laravel, MySQL, LAMP stack (Linux/Windows, Apache, MySQL, and PHP)</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">March 2021 - October 2021</span>
           </div>
         </div>
 
+        <!-- Flying Bird international -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">Flying Bird International</div>
+            <p>Technologies – PHP, MySQL, JavaScript, HTML, CSS</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - February 2021</span>
+          </div>
+        </div>
+
+        <!-- Narola Infotech -->
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Trainee Software Engineer</h3>
+            <h3 class="mb-0">Software Engineer</h3>
             <div class="subheading mb-3">Narola Infotech</div>
-            <p>I learned and became proficient in programming languages like PHP, JavaScript, jQuery, Ajax, and
-              frameworks such as Laravel and WordPress. Collaborating closely with senior developers, I acquired the
-              skills needed for software development projects and gained expertise in database design and schema
-              maintenance, including normalization techniques.</p>
+            <p>Technologies – PHP, MySQL, JavaScript, WordPress, Laravel, HTML, CSS</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2019 - July 2019</span>
@@ -196,34 +213,64 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline list-icons">
           <li class="list-inline-item">
-            <i class="devicons devicons-html5"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-html5"></i>
+              <div style="font-size: 17px;">HTML</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-css3"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-css3"></i>
+              <div style="font-size: 17px;">CSS</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-javascript"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-javascript"></i>
+              <div style="font-size: 17px;">JavaScript</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-react"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-react"></i>
+              <div style="font-size: 17px;">React JS</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-angular"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-angular"></i>
+              <div style="font-size: 17px;">Angular JS</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-nodejs"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-nodejs"></i>
+              <div style="font-size: 17px;">Node JS</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-php"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-php"></i>
+              <div style="font-size: 17px;">PHP</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-jquery"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-jquery"></i>
+              <div style="font-size: 17px;">jQuery</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-bootstrap"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-bootstrap"></i>
+              <div style="font-size: 17px;">Bootstrap</div>
+            </div>
           </li>
           <li class="list-inline-item">
-            <i class="devicons devicons-wordpress"></i>
+            <div style="display: flex; flex-direction: column;">
+              <i class="devicons devicons-wordpress"></i>
+              <div style="font-size: 17px;">WordPress</div>
+            </div>
           </li>
         </ul>
 
