--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/resume.min.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -32,7 +32,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Start Bootstrap</span>
+      <span class="d-block d-lg-none">Hiral Soni</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Hiral_Soni.png" alt="">
       </span>
@@ -69,7 +69,7 @@
     </div>
   </nav>
 
-  <div class="container-fluid p-0">
+  <div class="container-fluid main-section p-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
@@ -100,6 +100,14 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://leetcode.com/u/hiralsoni/" target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <img src="https://cdn.simpleicons.org/leetcode/FFFFFF" alt="LeetCode"
+                  style="width: 60%; position: absolute; top: 20%; left: 20%;"> </span>
             </a>
           </li>
         </ul>
