Added project section, updated skills section, update resume

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i"
     rel="stylesheet">
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -47,22 +47,24 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
-        </li> -->
+
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Hiral_Soni_Resume.pdf" download="Hiral_Soni_Resume">Download the
+          <a class="nav-link" href="Hiral_Soni.pdf" download="Hiral_Soni_Resume">Download the
             Resume</a>
         </li>
       </ul>
@@ -111,6 +113,95 @@
             </a>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
+      <div class="my-auto">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Humber College, Canada</h3>
+            <div class="subheading mb-3">Post Graduate Diploma</div>
+            <div>Information Technology Solutions</div>
+            <p>GPA: 88.6</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2022 - August 2023</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Gujarat Technological University, India</h3>
+            <div class="subheading mb-3">Bachelor of Engineering</div>
+            <p>GPA: 80.0</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2015 - May 2019</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+      <div class="my-auto">
+        <h2 class="mb-5">Projects</h2>
+
+        <!-- Job Portal -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Job Portal</h3>
+            <div class="subheading mb-3">Full-stack | React | Node | Express | Mongodb | Shadcn UI</div>
+            <p>A Fullstack Job Portal application built using ReactJS, Express, NodeJS, and MongoDB. This platform
+              allows users to
+              search, apply for jobs, and manage job listings.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">
+              <a href="https://github.com/hiralsonip/JobPortal" target="_blank">Github Repository</a> |
+              <a href="https://jobportal-aun3.onrender.com/" target="_blank">Live Project Link</a>
+            </span>
+          </div>
+        </div>
+
+        <!-- Music Academy Website -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Music Academy</h3>
+            <div class="subheading mb-3"> Next.js | Aceternity UI | TypeScript | Tailwind CSS </div>
+            <p> Music Acedemy Website is a modern, responsive, and a feature-rich web apllication built using Next.js
+              and Aceternity UI.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">
+              <a href="https://github.com/hiralsonip/MusicNextJS" target="_blank">Github Repository</a>
+            </span>
+          </div>
+        </div>
+
+        <!-- Real Estate website -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Rent Well</h3>
+            <div class="subheading mb-3"> HTML | Bootstrap | JavaScript | CSS </div>
+            <p> Rent Well website is designed for individuals seeking accommodation in a specific city as well as
+              property
+              owners looking to
+              sell or rent their properties.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">
+              <a href="https://github.com/hiralsonip/RealEstetProject" target="_blank">Github Repository</a>
+            </span>
+          </div>
+        </div>
+
       </div>
     </section>
 
@@ -184,100 +275,117 @@
 
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
-      <div class="my-auto">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Humber College, Canada</h3>
-            <div class="subheading mb-3">Post Graduate Diploma</div>
-            <div>Information Technology Solutions</div>
-            <p>GPA: 88.6</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">January 2022 - August 2023</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Gujarat Technological University, India</h3>
-            <div class="subheading mb-3">Bachelor of Engineering</div>
-            <p>GPA: 80.0</p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2015 - May 2019</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
       <div class="my-auto">
         <h2 class="mb-5">Skills</h2>
 
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline list-icons">
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-html5"></i>
-              <div style="font-size: 17px;">HTML</div>
-            </div>
-          </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-css3"></i>
-              <div style="font-size: 17px;">CSS</div>
-            </div>
-          </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-javascript"></i>
-              <div style="font-size: 17px;">JavaScript</div>
-            </div>
-          </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-react"></i>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-react-original colored"></i>
               <div style="font-size: 17px;">React JS</div>
             </div>
           </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-angular"></i>
-              <div style="font-size: 17px;">Angular JS</div>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-redux-original colored"></i>
+              <div style="font-size: 17px;">Redux</div>
             </div>
           </li>
-          <li class="list-inline-item">
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-nextjs-plain colored"></i>
+              <div style="font-size: 17px;">Next JS</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
             <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-nodejs"></i>
+              <i class="devicon-nodejs-plain colored"></i>
               <div style="font-size: 17px;">Node JS</div>
             </div>
           </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-php"></i>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-express-original colored" style="font-size: 40px;"></i>
+              <div style="font-size: 17px;">Express JS</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-javascript-plain colored"></i>
+              <div style="font-size: 17px;">JavaScript</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-typescript-plain colored"></i>
+              <div style="font-size: 17px;">TypeScript</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-mysql-original colored"></i>
+              <div style="font-size: 17px;">MySQL</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-mongodb-plain colored"></i>
+              <div style="font-size: 17px;">MongoDB</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-tailwindcss-plain colored"></i>
+              <div style="font-size: 17px;">Tailwind CSS</div>
+            </div>
+          </li>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-html5-plain colored"></i>
+              <div style="font-size: 17px;">HTML</div>
+            </div>
+          </li>
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-css3-plain colored"></i>
+              <div style="font-size: 17px;">CSS</div>
+            </div>
+          </li>
+
+
+
+
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-php-plain colored" style="font-size: 40px;"></i>
               <div style="font-size: 17px;">PHP</div>
             </div>
           </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-jquery"></i>
-              <div style="font-size: 17px;">jQuery</div>
-            </div>
-          </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-bootstrap"></i>
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-bootstrap-plain colored"></i>
               <div style="font-size: 17px;">Bootstrap</div>
             </div>
           </li>
-          <li class="list-inline-item">
-            <div style="display: flex; flex-direction: column;">
-              <i class="devicons devicons-wordpress"></i>
-              <div style="font-size: 17px;">WordPress</div>
+
+          <li class="list-inline-item mr-4">
+            <div style="display: flex; flex-direction: column; align-items: center;">
+              <i class="devicon-java-plain colored"></i>
+              <div style="font-size: 17px;">Java</div>
             </div>
           </li>
         </ul>
@@ -303,9 +411,6 @@
         </ul>
       </div>
     </section>
-
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
-    </section> -->
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
