Update the style for smaller screen

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     </div>
   </nav>
 
-  <div class="container-fluid main-section p-0">
+  <div id="image"></div>
 
+  <div class="container-fluid main-section p-0">
     <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
       <div class="my-auto">
         <h1 class="mb-0">Hiral
@@ -419,6 +420,8 @@
           nature. When I'm not immersed in coding, I find solace in the pages of a good book, and I often take leisurely
           walks in the natural world to reconnect with its beauty and serenity. These interests bring balance to my
           life, allowing me to embrace both the digital realm and the wonders of the natural world in my free time.</p>
+        <p><a href="https://medium.com/@sonihiral16" target="_blank">View my articles on Medium</a>
+        </p>
       </div>
     </section>
 
