--- a/index.html
+++ b/index.html
@@ -151,6 +151,23 @@
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
 
+        <!-- Chat Application -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Vibe</h3>
+            <div class="subheading mb-3">Full-stack | React | Node | Express | Mongodb | Daisy UI | Zustand</div>
+            <p>A Fullstack chat application built using ReactJS, Express, NodeJS, Zustand, and MongoDB. Using this
+              platform user can chat in real-time as well as share images.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">
+              <a href="https://github.com/hiralsonip/ChatApp" target="_blank">Github Repository</a> |
+              <a href="https://chatapp-z726.onrender.com/" target="_blank">Live Project Link</a>
+            </span>
+          </div>
+        </div>
+
         <!-- Job Portal -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
