--- a/index.html
+++ b/index.html
@@ -227,6 +227,19 @@
       <div class="my-auto">
         <h2 class="mb-5">Experience</h2>
 
+        <!-- Xodiac -->
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">One Community Global</div>
+            <p>Technologies – React.js, Supabase, TypeScript, Tailwind CSS
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">September 2024 - Present</span>
+          </div>
+        </div>
+
         <!-- One community -->
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
