--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Software Developer</h3>
-            <div class="subheading mb-3">One Community Global</div>
+            <div class="subheading mb-3">Xodiac Inc.</div>
             <p>Technologies – React.js, Supabase, TypeScript, Tailwind CSS
             </p>
           </div>
