--- a/index.html
+++ b/index.html
@@ -147,79 +147,82 @@
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+    <section class="resume-section p-3 p-lg-5" id="projects">
       <div class="my-auto">
         <h2 class="mb-5">Projects</h2>
 
-        <!-- Chat Application -->
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Vibe</h3>
-            <div class="subheading mb-3">Full-stack | React | Node | Express | Mongodb | Daisy UI | Zustand</div>
-            <p>A Fullstack chat application built using ReactJS, Express, NodeJS, Zustand, and MongoDB. Using this
-              platform user can chat in real-time as well as share images.
-            </p>
+        <div class="row">
+          <!-- Chat Application -->
+          <div class="col-md-6 mb-4">
+            <div class="resume-item p-3 border rounded h-100">
+              <h3 class="mb-0">Vibe</h3>
+              <div class="subheading mb-3">Full-stack | React | Node | Express | MongoDB | Daisy UI | Zustand</div>
+              <p>A Fullstack chat application built using ReactJS, Express, NodeJS, Zustand, and MongoDB. Users can chat
+                in
+                real-time and share images.</p>
+              <span class="text-primary">
+                <a href="https://github.com/hiralsonip/ChatApp" target="_blank">Github</a> |
+                <a href="https://chatapp-z726.onrender.com/" target="_blank">Live</a>
+              </span>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">
-              <a href="https://github.com/hiralsonip/ChatApp" target="_blank">Github Repository</a> |
-              <a href="https://chatapp-z726.onrender.com/" target="_blank">Live Project Link</a>
-            </span>
-          </div>
-        </div>
 
-        <!-- Job Portal -->
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Job Portal</h3>
-            <div class="subheading mb-3">Full-stack | React | Node | Express | Mongodb | Shadcn UI</div>
-            <p>A Fullstack Job Portal application built using ReactJS, Express, NodeJS, and MongoDB. This platform
-              allows users to
-              search, apply for jobs, and manage job listings.
-            </p>
+          <!-- Task Management -->
+          <div class="col-md-6 mb-4">
+            <div class="resume-item p-3 border rounded h-100">
+              <h3 class="mb-0">Task Management</h3>
+              <div class="subheading mb-3">Full-stack | Angular | Nest JS | Type ORM | NX Monorepo
+              </div>
+              <p>A role-based task management system built with Angular, NestJS, and TypeORM inside an NX monorepo.
+                Supports
+                organizations, roles, and permissions with JWT authentication.</p>
+              <span class="text-primary">
+                <a href="https://github.com/hiralsonip/TaskManagement" target="_blank">Github</a>
+              </span>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">
-              <a href="https://github.com/hiralsonip/JobPortal" target="_blank">Github Repository</a> |
-              <a href="https://jobportal-aun3.onrender.com/" target="_blank">Live Project Link</a>
-            </span>
-          </div>
-        </div>
 
-        <!-- Music Academy Website -->
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Music Academy</h3>
-            <div class="subheading mb-3"> Next.js | Aceternity UI | TypeScript | Tailwind CSS </div>
-            <p> Music Acedemy Website is a modern, responsive, and a feature-rich web apllication built using Next.js
-              and Aceternity UI.
-            </p>
+          <!-- Job Portal -->
+          <div class="col-md-6 mb-4">
+            <div class="resume-item p-3 border rounded h-100">
+              <h3 class="mb-0">Job Portal</h3>
+              <div class="subheading mb-3">Full-stack | React | Node | Express | MongoDB | Shadcn UI</div>
+              <p>A Fullstack Job Portal application built using ReactJS, Express, NodeJS, and MongoDB. Users can search,
+                apply, and manage job listings.</p>
+              <span class="text-primary">
+                <a href="https://github.com/hiralsonip/JobPortal" target="_blank">Github</a> |
+                <a href="https://jobportal-aun3.onrender.com/" target="_blank">Live</a>
+              </span>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">
-              <a href="https://github.com/hiralsonip/MusicNextJS" target="_blank">Github Repository</a>
-            </span>
-          </div>
-        </div>
 
-        <!-- Real Estate website -->
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Rent Well</h3>
-            <div class="subheading mb-3"> HTML | Bootstrap | JavaScript | CSS </div>
-            <p> Rent Well website is designed for individuals seeking accommodation in a specific city as well as
-              property
-              owners looking to
-              sell or rent their properties.
-            </p>
+          <!-- Music Academy Website -->
+          <div class="col-md-6 mb-4">
+            <div class="resume-item p-3 border rounded h-100">
+              <h3 class="mb-0">Music Academy</h3>
+              <div class="subheading mb-3">Next.js | Aceternity UI | TypeScript | Tailwind CSS</div>
+              <p>Music Academy Website is a modern, responsive, and feature-rich web application built using Next.js and
+                Aceternity UI.</p>
+              <span class="text-primary">
+                <a href="https://github.com/hiralsonip/MusicNextJS" target="_blank">Github</a>
+              </span>
+            </div>
           </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">
-              <a href="https://github.com/hiralsonip/RealEstetProject" target="_blank">Github Repository</a>
-            </span>
-          </div>
-        </div>
 
+          <!-- Real Estate Website -->
+          <div class="col-md-6 mb-4">
+            <div class="resume-item p-3 border rounded h-100">
+              <h3 class="mb-0">Rent Well</h3>
+              <div class="subheading mb-3">HTML | Bootstrap | JavaScript | CSS</div>
+              <p>Rent Well website helps individuals find accommodations and allows property owners to sell or rent
+                properties.</p>
+              <span class="text-primary">
+                <a href="https://github.com/hiralsonip/RealEstetProject" target="_blank">Github</a>
+              </span>
+            </div>
+          </div>
+
+        </div>
       </div>
     </section>
 
@@ -232,7 +235,7 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Software Developer</h3>
             <div class="subheading mb-3">Xodiac Inc.</div>
-            <p>Technologies – React.js, Supabase, TypeScript, Tailwind CSS
+            <p>Technologies - React.js, Supabase, TypeScript, Tailwind CSS
             </p>
           </div>
           <div class="resume-date text-md-right">
